Modelo de event-card hecho

--- a/src/app/events/pages/billboard/billboard.component.html
+++ b/src/app/events/pages/billboard/billboard.component.html
@@ -1,2 +1,15 @@
-<p>billboard works!</p>
+<div class="container">
+
+    <h2 class="mb-3">Cartelera</h2>
+
+    <!-- Event cards -->
+    <div class="row justify-content-center">
+        <app-event-card class="col-md-5"></app-event-card>
+        <app-event-card class="col-md-5"></app-event-card>
+        <app-event-card class="col-md-5"></app-event-card>
+        <app-event-card class="col-md-5"></app-event-card>
+    </div>
+
+</div>
+
 
