getEvents en Billboard con service

--- a/src/app/events/pages/billboard/billboard.component.html
+++ b/src/app/events/pages/billboard/billboard.component.html
@@ -1,6 +1,8 @@
 <div class="container">
 
-    <h2 class="mb-3">Cartelera</h2>
+    <div class="row justify-content-center mb-3">
+        <h2>Cartelera</h2>
+    </div>    
 
     <!-- Event cards -->
     <div class="row justify-content-center">
