Refactorizo y añado módulo en shared

--- a/src/app/events/pages/event-detail/event-detail.component.html
+++ b/src/app/events/pages/event-detail/event-detail.component.html
@@ -1,1 +1,24 @@
-<p>event-detail works!</p>
+<div class="container">
+
+    <!-- Título -->
+    <div class="row justify-content-start mb-3">
+        <h2>Detalles del evento</h2>
+    </div> 
+    
+    <!-- Botón volver -->
+    <div class="row justify-content-end mb-3">
+        <button class="btn btn-primary" routerLink="/events/billboard" type="button">Volver</button>
+    </div>
+
+    <div class="row">
+
+        <!-- Session List -->
+        <app-session-list></app-session-list>
+
+        <!-- Shopping Cart -->
+        <app-shopping-cart></app-shopping-cart>
+
+    </div>
+    
+
+</div>
