Layout session list

--- a/src/app/events/components/session-list/session-list.component.html
+++ b/src/app/events/components/session-list/session-list.component.html
@@ -1,1 +1,63 @@
-<p>session-list works!</p>
+<div class="border border-2 rounded p-3">
+
+    <!-- Título -->
+    <h4 class="mb-2">Sesiones</h4>
+
+    <!-- Lista -->
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item d-flex justify-content-between">
+            <!-- Texto -->
+            <div>
+                <!-- Fecha -->
+                <p>Fecha: 23/09/2015, Disponibilidad: 3 </p>                
+            </div>
+
+            <!-- Controles -->
+            <div>
+                <!-- Botón menos -->
+                <span>-</span>
+                <!-- Número -->
+                <span>0</span>
+                <!-- Botón más -->
+                <span>+</span>
+            </div>
+        </li>
+
+        <li class="list-group-item d-flex justify-content-between">
+            <!-- Texto -->
+            <div>
+                <!-- Fecha -->
+                <p>Fecha: 23/09/2015, Disponibilidad: 3 </p>                
+            </div>
+
+            <!-- Controles -->
+            <div>
+                <!-- Botón menos -->
+                <span>-</span>
+                <!-- Número -->
+                <span>0</span>
+                <!-- Botón más -->
+                <span>+</span>
+            </div>
+        </li>
+
+        <li class="list-group-item d-flex justify-content-between">
+            <!-- Texto -->
+            <div>
+                <!-- Fecha -->
+                <p>Fecha: 23/09/2015, Disponibilidad: 3 </p>                
+            </div>
+
+            <!-- Controles -->
+            <div>
+                <!-- Botón menos -->
+                <span>-</span>
+                <!-- Número -->
+                <span>0</span>
+                <!-- Botón más -->
+                <span></span>
+            </div>
+        </li>
+        
+    </ul>
+</div>
