--- a/src/app/events/pages/event-detail/event-detail.component.html
+++ b/src/app/events/pages/event-detail/event-detail.component.html
@@ -6,17 +6,17 @@
     </div> 
     
     <!-- Botón volver -->
-    <div class="row justify-content-end mb-3">
+    <div class="row justify-content-end mb-4">
         <button class="btn btn-primary" routerLink="/events/billboard" type="button">Volver</button>
     </div>
 
-    <div class="row">
+    <div class="row justify-content-between">
 
         <!-- Session List -->
-        <app-session-list></app-session-list>
+        <app-session-list class="col-md-6 mb-4 mb-md-0"></app-session-list>
 
         <!-- Shopping Cart -->
-        <app-shopping-cart></app-shopping-cart>
+        <app-shopping-cart class="col-md-6"></app-shopping-cart>
 
     </div>
     
