Instalo ng font awesome y añado icons + y -

--- a/src/app/events/components/session-list/session-list.component.html
+++ b/src/app/events/components/session-list/session-list.component.html
@@ -15,11 +15,16 @@
             <!-- Controles -->
             <div>
                 <!-- Botón menos -->
-                <span>-</span>
+                <span class="mr-2">
+                    <fa-icon [icon]="faMinus"></fa-icon>
+                </span>                
                 <!-- Número -->
                 <span>0</span>
                 <!-- Botón más -->
-                <span>+</span>
+                <span class="ml-2">
+                    <fa-icon [icon]="faPlus"></fa-icon>
+                </span>
+                
             </div>
         </li>
 
