Display de la información de las sesiones y ordenar por date

--- a/src/app/events/pages/event-detail/event-detail.component.html
+++ b/src/app/events/pages/event-detail/event-detail.component.html
@@ -15,7 +15,7 @@
         <!-- Session List -->
         <app-session-list 
             class="col-md-6 mb-4 mb-md-0"
-            [eventToShow]="eventToShow"
+            [sessionsToShow]="sessionsToShow"
             *ngIf="eventToShow"></app-session-list>
 
         <!-- Shopping Cart -->
