--- a/src/app/events/components/session-list/session-list.component.html
+++ b/src/app/events/components/session-list/session-list.component.html
@@ -6,11 +6,11 @@
     <!-- Lista -->
     <ul class="list-group list-group-flush">
         <li class="list-group-item d-flex justify-content-between"
-            *ngFor="let session of eventToShow.sessions">
+            *ngFor="let session of sessionsToShow">
             <!-- Texto -->
             <div>
                 <!-- Fecha -->
-                <p>Fecha: 23/09/2015, Disponibilidad: 3 </p>                
+                <p>Fecha: {{ session.date | date: 'dd/MM/yyyy' }}, Disponibilidad: {{ session.availability }} </p>                
             </div>
 
             <!-- Controles -->
