Retocado estilo tarjetas i links

--- a/src/app/events/components/event-card/event-card.component.html
+++ b/src/app/events/components/event-card/event-card.component.html
@@ -1,8 +1,8 @@
-<div class="card mb-4">
+<div class="card">
     <!-- Título y subtítulo -->
     <div class="card-header">
-        <h5 class="card-title" routerLink="/events/detail/{{ eventToShow.id }}">{{ eventToShow.title }}</h5>
-        <h6 class="card-text" routerLink="/events/detail/{{ eventToShow.id }}">{{ eventToShow.subtitle }}</h6>
+        <h5 class="card-title title-hover" routerLink="/events/detail/{{ eventToShow.id }}">{{ eventToShow.title }}</h5>
+        <h6 class="card-text title-hover" routerLink="/events/detail/{{ eventToShow.id }}">{{ eventToShow.subtitle }}</h6>
     </div>
 
     <!-- Imagen -->       
