--- a/src/app/events/components/session-list/session-list.component.html
+++ b/src/app/events/components/session-list/session-list.component.html
@@ -23,7 +23,8 @@
                 <span>0</span>
                 <!-- Botón más -->
                 <span class="ml-2">
-                    <fa-icon [icon]="faPlus"></fa-icon>
+                    <fa-icon [icon]="faPlus"
+                        (click)='increment(session)'></fa-icon>
                 </span>
                 
             </div>
