--- a/src/app/events/pages/billboard/billboard.component.html
+++ b/src/app/events/pages/billboard/billboard.component.html
@@ -6,13 +6,10 @@
 
     <!-- Event cards -->
     <div class="row justify-content-center">
-        <app-event-card class="col-md-5"
+        <app-event-card class="col-md-5 mb-4"
             *ngFor="let event of events"
             [eventToShow]="event"
         ></app-event-card>
-        <!-- <app-event-card class="col-md-5"></app-event-card>
-        <app-event-card class="col-md-5"></app-event-card>
-        <app-event-card class="col-md-5"></app-event-card> -->
     </div>
 
 </div>
