Capturo el event Id ene l componente session-list

--- a/src/app/events/pages/event-detail/event-detail.component.html
+++ b/src/app/events/pages/event-detail/event-detail.component.html
@@ -16,6 +16,7 @@
         <app-session-list 
             class="col-md-6 mb-4 mb-md-0"
             [sessionsToShow]="sessionsToShow"
+            [eventId]="id"
             *ngIf="eventToShow"></app-session-list>
 
         <!-- Error block -->
