Mapeo el sessionsToShow para que inicialice el totalAmount a 0

--- a/src/app/events/components/session-list/session-list.component.html
+++ b/src/app/events/components/session-list/session-list.component.html
@@ -24,7 +24,7 @@
           <fa-icon [icon]="faMinus" (click)="decrement(session)"></fa-icon>
         </span>
         <!-- Número -->
-        <span>{{ total }}</span>
+        <span>{{ session.totalAmount }}</span>
         <!-- Botón más -->
         <span class="ml-2">
           <fa-icon [icon]="faPlus" (click)="increment(session)"></fa-icon>
